@@ -1,3 +1,9 @@
+Tue Sep 18 22:50:41 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* Do not show the private channels on the WHOIS channel list
+	  as it is not allowed by the protocol.  The affected file is
+	  silcd/server.c.
+
 Sun Sep 16 12:32:58 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Assure that the packet length digged from the actual packet
